tests/pos/objects/opt-fields.ts
declare var opt: { f?: number };

declare var man: { f: number };

opt = man;
