tests/neg/objects/opt-fields-00.ts
declare var opt: { f?: number };

declare var man: { f: number };

man = opt;
